[tool.poetry]
name = "eagerx_demo"
version = "0.0.0"
license = "Apache2.0"
description = "OpenDR EAGERx use case demo."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_demo"
repository = "https://github.com/eager-dev/eagerx_demo"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.8, <3.9"
eagerx = "^0.1.39"
eagerx-interbotix = "^0.1.11"
clip = { git = "https://github.com/openai/clip.git", branch = "main" }
openai = "^0.22.1"
ftfy = "^6.1.1"
imageio = "2.9.0"
imageio-ffmpeg = "0.4.5"
transformers = "4.3.2"
kornia = "0.4.1"
pytorch-lightning = "1.0.3"
transforms3d = "^0.4.1"
sounddevice = "^0.4.6"
openai-whisper = "^20230314"
soundfile = "^0.12.1"
pynput = "^1.7.6"
protobuf = "<4"
torch = "1.12"
torchvision = "0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
flake8 = ">=3"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_demo/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
